// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton component should not display cancel button if withCancel is false 1`] = `
<div
  className="form-action-buttons"
>
  <button
    className="cancel-button action-button"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
  >
    CANCEL
  </button>
  <button
    className="action-button"
    onClick={[Function]}
  >
    SAVE CHANGES
  </button>
</div>
`;

exports[`ActionButton component should render correctly 1`] = `
<div
  className="form-action-buttons"
>
  <button
    className="cancel-button action-button"
    onClick={[MockFunction]}
  >
    CANCEL
  </button>
  <button
    className="action-button"
    onClick={[Function]}
  >
    SAVE CHANGES
  </button>
</div>
`;
